--- a/app/assets/javascripts/templates/reviews/show.hbs
+++ b/app/assets/javascripts/templates/reviews/show.hbs
@@ -68,11 +68,15 @@
   <div class="review-sidebar">
     <div class="series-panel">
       <div class="review-avatar">
-        <img src="https://static.hummingbird.me/users/avatars/000/002/321/thumb/best_girl._not_worth_arguing__564cd10f3e281c45dde9288b61205bf2.jpg?1398731881" />
+        {{avatar user 'thumb'}}
       </div>
       <div class="reviewer-information">
-        <h5>Ryan</h5>
-        <button class="btn btn-default btn-lg follow-button" data-ember-action="2169">Follow</button>
+        <h5>{{user.username}}</h5>
+        {{#if user.isFollowed}}
+          <button class="btn btn-default btn-lg follow-button unfollow" {{action "toggleFollow" user}}>Unfollow</button>
+        {{else}}
+          <button class="btn btn-default btn-lg follow-button" {{action "toggleFollow" user}}>Follow</button>
+        {{/if}}
       </div>
     </div>
     <div class="series-panel">
@@ -80,7 +84,7 @@
         <div class="recommend">
           <a {{action "upvote"}} {{bind-attr class="upvoted:active"}}>
             {{#if upvoted}}
-              Liked! 
+              Liked!
             {{else}}
               Like this review
             {{/if}}
@@ -94,7 +98,7 @@
       </div>
     </div>
   </div>
-  <!-- End Left Side -->
+  <!-- End Right Side -->
 
 </div>
 
