Hook up franchise section.

--- a/app/assets/javascripts/templates/anime/index.hbs
+++ b/app/assets/javascripts/templates/anime/index.hbs
@@ -199,68 +199,8 @@
       <div class="panel-title">
         <h4>Franchise</h4>
       </div>
-      <div class="franchise-show">
-        <div class="franchise-poster">
-          <img class="series-poster" src="https://static.hummingbird.me/anime/poster_images/000/007/442/large/7442.jpg?1408461368" data-bindattr-1303="1303">
-        </div>
-        <div class="franchise-info">
-          <h4 class="series-title">
-            <a id="ember1304" class="ember-view active" href="/anime/attack-on-titan">Attack on Titan</a>
-          </h4>
-          <ul class="series-metadata">
-            <li>TV</li>
-            <li title="Violence, Profanity" data-bindattr-1306="1306">R17+</li>
-            <li>
-              25 episodes
-            </li>
-            <li>
-                24
-              min
-            </li>
-            <li>Aired from 7 Apr 2013 to 28 Sep 2013</li>
-          </ul>
-          <div>Several hundred years ago, humans were nearly exterminated by giants. Giants are typically several stories tall, seem to have no intelligence, devour human beings and, worst of all, seem to do it for…
-            <a data-ember-action="1314" href="javascript:void(0)" style="font-size: 0.8em">
-                show more
-            </a>
-          </div>
-        </div>
-      </div>  
-
-      <div class="franchise-show">
-        <div class="franchise-poster">
-          <img class="series-poster" src="https://static.hummingbird.me/anime/poster_images/000/007/442/large/7442.jpg?1408461368" data-bindattr-1303="1303">
-        </div>
-        <div class="franchise-info">
-          <h4 class="series-title">
-            <a id="ember1304" class="ember-view active" href="/anime/attack-on-titan">Attack on Titan</a>
-          </h4>
-          <ul class="series-metadata">
-            <li>TV</li>
-            <li title="Violence, Profanity" data-bindattr-1306="1306">R17+</li>
-            <li>
-              25 episodes
-            </li>
-            <li>
-                24
-              min
-            </li>
-            <li>Aired from 7 Apr 2013 to 28 Sep 2013</li>
-          </ul>
-          <div>Several hundred years ago, humans were nearly exterminated by giants. Giants are typically several stories tall, seem to have no intelligence, devour human beings and, worst of all, seem to do it for…
-            <a data-ember-action="1314" href="javascript:void(0)" style="font-size: 0.8em">
-                show more
-            </a>
-          </div>
-        </div>
-      </div>  
-  
-
-      <div class="view-more">
-        <a href="#">View More in Franchise</a>
-      </div>
+      {{partial "anime/franchise"}}
     </div>
-    <!-- Franchise end -->
   </div>
   <!-- Left side End -->
 
