--- a/app/assets/javascripts/templates/anime.hbs
+++ b/app/assets/javascripts/templates/anime.hbs
@@ -1,9 +1,11 @@
 <div class="series-header" {{bind-attr style=coverImageStyle}}>
   <div class="container">
     <div class="header-buttons">
-      <span class="edit-button">
-        <a {{action "openModal" "edit-anime" this}}>Edit this page</a>
-      </span>
+      {{#if currentUser.isAdmin}}
+        <span class="edit-button">
+          <a {{action "openModal" "edit-anime" this}}>Edit this page</a>
+        </span>
+      {{/if}}
       <span class="facebook-share">
         <div class="fb-like" data-layout="button_count" data-action="like" data-show-faces="false" data-share="false"></div>
       </span>
