Fix class typo and clear review block

--- a/app/assets/javascripts/templates/anime/index.hbs
+++ b/app/assets/javascripts/templates/anime/index.hbs
@@ -258,7 +258,7 @@
     </div>
     <div class="reviews">
       <h4> Reviews:</h4>
-      <div class="review links">
+      <div class="review-links">
         <a {{bind-attr href=fullReviewsURL}}>View All</a> · <a {{bind-attr href=newReviewURL}}>Write One</a>
       </div>
       {{#each trendingReviews itemController="review"}}
