Change margin-top to margin-bottom on review bubbles

--- a/app/assets/stylesheets/partials/anime-page.css.scss
+++ b/app/assets/stylesheets/partials/anime-page.css.scss
@@ -585,7 +585,7 @@
 .quote-bubble {
   width: 100%;
   max-width: 400px;
-  margin-top: 15px;
+  margin-bottom: 15px;
   .review-quote {
     position: relative;
     width: 100%;
