Reduce header height when there's no cover image

--- a/app/assets/javascripts/templates/anime.hbs
+++ b/app/assets/javascripts/templates/anime.hbs
@@ -1,4 +1,4 @@
-<div class="series-header" {{bind-attr style=coverImageStyle}}>
+<div {{bind-attr class=":series-header noCoverImage"}} {{bind-attr style=coverImageStyle}}>
   <div class="container">
     <div class="header-buttons">
       <span class="edit-button">
