paginate edits page, 10 per page

--- a/app/assets/javascripts/templates/edits.hbs
+++ b/app/assets/javascripts/templates/edits.hbs
@@ -58,6 +58,10 @@
                   </div>
                 {{/if}}
               {{/each}}
+
+              {{#if canLoadMore}}
+                {{load-more classNames="light" action="loadNextPage"}}
+              {{/if}}
             </div>
           {{else}}
             <p class="edits-none">There aren't any pending anime changes.</p>
