--- a/app/assets/javascripts/templates/apps.hbs
+++ b/app/assets/javascripts/templates/apps.hbs
@@ -1,76 +1,15 @@
-<div class="apps-header">
+<div {{bind-attr class=":apps-header isIndex::condensed"}}>
   <div class="container">
     <h1>Applications</h1>
-    <p>The Hummingbird developer community is incredibly talented <br> and has created a variety of useful apps with <a href="https://github.com/hummingbird-me/hummingbird/wiki/API-Reference">our API.</a></p>
-    <p>Are you a developer? <a href="https://github.com/hummingbird-me/hummingbird">We’re open-source!</a></p>
+    {{#if isIndex}}
+      <p>The Hummingbird developer community is incredibly talented <br> and has created a variety of useful apps with <a href="https://github.com/hummingbird-me/hummingbird/wiki/API-Reference">our API.</a></p>
+      <p>Are you a developer? <a href="https://github.com/hummingbird-me/hummingbird">We’re open-source!</a></p>
+    {{/if}}
+    {{#if currentUser.isSignedIn}}
+      {{#link-to 'apps.mine' class="btn btn-default pull-right"}}<i class="fa fa-cog"></i> Manage Apps{{/link-to}}
+    {{/if}}
   </div>
 </div>
 <div class="apps-page">
-  <h2>Mobile Apps</h2>
-  <div class="block-grid-md-2 block-grid-sm-1">
-    {{#each mobileApps}}
-      <div class="block-grid-item">
-        <div class="app-card">
-          {{!--
-            <img class="app-image" {{bind-attr src=cover}} />
-          --}}
-          <div class="app-inner">
-            <h3 class="app-title">{{name}} <span class="app-type">{{platform}}</span></h3>
-            {{#each author}}
-              <small class="app-author">by  <a {{bind-attr href=link}}>{{name}}</a></small>
-            {{/each}}
-            <hr>
-            <p class="app-desc">{{desc}}</p>
-
-            <div class="app-link">
-              {{#each links}}
-                <a {{bind-attr href=link}}>{{name}}</a>
-              {{/each}}
-            </div>
-            <div class="app-screens block-grid-md-2 block-grid-sm-1">
-              {{#each screenshots}}
-                <div class="block-grid-item">
-                  <img src="{{unbound this}}">
-                </div>
-              {{/each}}
-            </div>
-          </div>
-        </div>
-      </div>
-    {{/each}}
-  </div>
-  <hr>  
-  <h2>Desktop Apps</h2>
-  <div class="block-grid-md-2 block-grid-sm-1">
-    {{#each desktopApps}}
-      <div class="block-grid-item">
-        <div class="app-card">
-          {{!--
-            <img class="app-image" {{bind-attr src=cover}} />
-          --}}
-          <div class="app-inner">
-            <h3 class="app-title">{{name}} <span class="app-type">{{platform}}</span></h3>
-            {{#each author}}
-              <small class="app-author">by  <a {{bind-attr href=link}}>{{name}}</a></small>
-            {{/each}}
-            <hr>
-            <p class="app-desc">{{desc}}</p>
-
-            <div class="app-link">
-              {{#each links}}
-                <a {{bind-attr href=link}}>{{name}}</a>
-              {{/each}}
-            </div>
-            <div class="app-screens block-grid-sm-1">
-              {{#each screenshots}}
-                <div class="block-grid-item">
-                  <img src="{{unbound this}}">
-                </div>
-              {{/each}}
-            </div>
-          </div>
-        </div>
-      </div>
-    {{/each}}
-  </div>
+  {{outlet}}
 </div>
