--- a/app/assets/javascripts/templates/modals/edit-anime.hbs
+++ b/app/assets/javascripts/templates/modals/edit-anime.hbs
@@ -45,7 +45,7 @@
         </div>
         <div class="form-group">
           <label>Cover Image Top Offset</label>
-          {{input value=coverImageTopOffset class="form-control"}}
+          {{input type="number" value=coverImageTopOffset class="form-control"}}
         </div>
       </div>
     </div>
