fix typo, format time using time-ago component

--- a/app/assets/javascripts/templates/edits.hbs
+++ b/app/assets/javascripts/templates/edits.hbs
@@ -24,7 +24,7 @@
                       {{/link-to}}
                     </span>
                     <span class="edit-entry-time">
-                      {{format-time createdAt 'MM MMM YY, HH:mm a'}}
+                      {{time-ago time=createdAt}}
                     </span>
                     <span class="edit-entry-actions">
                       <a href="#" {{action 'toggleDiff'}}>
