--- a/app/assets/stylesheets/partials/edits.css.scss
+++ b/app/assets/stylesheets/partials/edits.css.scss
@@ -30,6 +30,12 @@
       .edit-entry-user, .edit-entry-time {
         margin-right: 25px;
       }
+
+      .edit-entry-time {
+        display: inline-block;
+        width: 40%;
+        text-align: center;
+      }
     }
   }
 }
