Comment instead of display: none.

--- a/app/assets/javascripts/templates/dashboard.hbs
+++ b/app/assets/javascripts/templates/dashboard.hbs
@@ -9,7 +9,8 @@
 
   <div class="row">
     <div class="secondary-info">
-      <div class="community-widget-panel" style="display: none">
+      {{!--
+      <div class="community-widget-panel">
         <div class="panel-heading">
           <h3 class="panel-title">Trending Anime</h3>
         </div>
@@ -88,6 +89,7 @@
           </ul>
         </div>
       </div>
+      --}}
 
       {{community-widget title="Industry news" showMoreURL="https://forums.hummingbird.me/c/industry-news" apiCall="https://forums.hummingbird.me/c/industry-news.json"}}
       <div class="feed-sm-sidebar-advert">
