--- a/app/assets/javascripts/templates/modals/story-likes.hbs
+++ b/app/assets/javascripts/templates/modals/story-likes.hbs
@@ -1,17 +1,27 @@
-{{#bootstrap-modal action="close"}}
-  <div class="modal-body">
-    <ul>
-      {{#each likers}}
-        <li>
-          {{username}}
-          <img {{bind-attr src=avatar}}>
-        </li>
-      {{/each}}
-    </ul>
-    {{#if canLoadMore}}
-      {{load-more action="loadNextPage"}}
-    {{/if}}
-  </div>
-{{/bootstrap-modal}}
+<div class="story-modal">
+  {{#bootstrap-modal action="close"}}
+    <div class="modal-body">
+      <h4>Post Reactions</h4>
+      <hr>
+      <div class="all-likes">
+        <div class="section-label">
+          <i class="fa fa-heart"></i> 25
+        </div>
+        <ul>
+          {{#each likers}}
+            <li {{bind-attr data-tooltip=username}}>
+              {{#link-to 'user' id}}
+                <img {{bind-attr src=avatar}}>
+              {{/link-to}}
+            </li>
+          {{/each}}
+        </ul>
+        {{#if canLoadMore}}
+          {{load-more action="loadNextPage"}}
+        {{/if}}
+      </div>
+    </div>
+  {{/bootstrap-modal}}
+</div>
 
 
