--- a/app/assets/stylesheets/partials/status-panel.css.scss
+++ b/app/assets/stylesheets/partials/status-panel.css.scss
@@ -273,6 +273,37 @@
     }
   }
 }
+
+.story-modal {
+  .modal-content {
+    border: none;
+    box-shadow: none;
+    border-radius: 3px;
+  }
+  .section-label {
+    @extend .col-sm-2;
+    float: left;
+    font-weight: 500;
+    color: #F87270;
+  }
+  .all-likes {
+    @extend .clearfix;
+    ul {
+      @extend .col-sm-10;
+      li {
+        width: 50px;
+        float: left;
+        margin-right: 10px;
+        margin-bottom: 10px;
+        img {
+          width: 100%;
+          border-radius: 3px;
+        }
+      }
+    }
+  }
+}
+
 .comment-replies {
   @extend .panel-footer;
 
@@ -368,99 +399,6 @@
     border-top: 1px solid #e0e0e0;
     text-align: center;
     padding: 10px;
-  }
-}
-
-.status-toolbar {
-  padding-top: 0;
-  padding-bottom: 0;
-
-  .toolbar-actions {
-    padding-left: 0;
-    padding-right: 0;
-
-    .toolbar-action {
-      border-right: 1px solid $darkDivider;
-      padding-top: 10px;
-      padding-bottom: 10px;
-      font-size: 16px;
-
-      .like-button {
-        padding-right: 5px;
-        padding-bottom: 10px;
-        padding-top: 10px;
-        color: #7e7e7e;
-
-        &:hover {
-          color: $pink;
-        }
-
-        &.active {
-          color: $pink;
-        }
-      }
-
-      .reply-button {
-        padding-left: 15px;
-        padding-right: 10px;
-        padding-bottom: 10px;
-        padding-top: 10px;
-        color: #7e7e7e;
-
-        &:hover {
-          color: $darkOrange;
-        }
-      }
-
-      .repost-button {
-        padding-left: 20px;
-        padding-right: 10px;
-        padding-bottom: 10px;
-        padding-top: 10px;
-        color: #7e7e7e;
-
-        &:hover {
-          color: $darkOrange;
-        }
-      }
-    }
-  }
-
-  .users-who-liked {
-    float: right;
-    padding-top: 8px;
-
-    .responsive-image {
-      max-width: 25px;
-    }
-
-    .more-likes {
-      color: $medGrey;
-      font-family: $headerFontFamily;
-      font-size: 20px;
-      border-radius: 3px;
-      background: $darkEggshell;
-      font-size: 14px;
-      position: relative;
-      top: 3px;
-      padding: 3px 5px 3px 5px;
-    }
-  }
-
-  @media (max-width: 995px) {
-    .users-who-liked {
-      li:nth-of-type(5), li:nth-of-type(4) {
-        display: none;
-      }
-    }
-  }
-
-  @media (max-width: 400px) {
-    .users-who-liked {
-      li:nth-of-type(3), li:nth-of-type(2) {
-        display: none;
-      }
-    }
   }
 }
 
