Don't show guest CTA to logged in users.

--- a/app/assets/javascripts/templates/story/show.hbs
+++ b/app/assets/javascripts/templates/story/show.hbs
@@ -12,13 +12,13 @@
           {{#link-to 'user' user}}
             {{avatar user 'thumb'}}
           {{/link-to}}
-          
+
           {{#if user.isFollowed}}
             <a class="btn follow-button unfollow" {{action "toggleFollow" user}}> Unfollow</a>
           {{else}}
             <a class="btn follow-button" {{action "toggleFollow" user}}> Follow</a>
           {{/if}}
-          
+
         </div>
         <div class="user-info">
           <h4>
@@ -32,11 +32,12 @@
         </div>
       </div>
 
-      <div class="guest-cta">
-        <p>{{user.username}} is using Hummingbird to track, discover and discuss anime and manga with friends. Don't miss any of {{user.username}}'s updates.</p>
-        <a class="btn follow-button"> Create an Account</a>
-            
-      </div>
+      {{#unless currentUser.isSignedIn}}
+        <div class="guest-cta">
+          <p>{{user.username}} is using Hummingbird to track, discover and discuss anime and manga with friends. Don't miss any of {{user.username}}'s updates.</p>
+          <a class="btn follow-button"> Create an Account</a>
+        </div>
+      {{/unless}}
     </div>
   </div>
 </div>
