--- a/app/assets/stylesheets/partials/status-panel.css.scss
+++ b/app/assets/stylesheets/partials/status-panel.css.scss
@@ -46,7 +46,7 @@
   .story-title {
     color: #999999;
     font-weight: 300;
-    margin: 0;
+    margin: 0 0 5px 0;
 
     a {
       color: #333;
@@ -119,7 +119,7 @@
     }
 
     .secondary {
-      font-size: 14px;
+      font-size: 12px;
     }
 
     .permalink {
