--- a/app/assets/javascripts/templates/story/comment.hbs
+++ b/app/assets/javascripts/templates/story/comment.hbs
@@ -18,7 +18,7 @@
           {{time-ago time=createdAt}}
           ·
           {{#link-to 'story.show' this class="permalink"}}
-            Permalink
+            permalink
           {{/link-to}}
           {{#if canDeleteStory}}
             ·
