Hide view less link on permalink page

--- a/app/assets/stylesheets/partials/status-panel.css.scss
+++ b/app/assets/stylesheets/partials/status-panel.css.scss
@@ -310,6 +310,12 @@
 
 .permalink-wrapper {
   margin-top: 60px;
+  .update-feed {
+    margin-bottom: 50px;
+  }
+  .view-more {
+    display: none;
+  }
   .follow-panel {
     .user-avatar {
       top: 100px;
