Add feed-like statistics to kotodama

--- a/app/assets/javascripts/templates/kotodama.hbs
+++ b/app/assets/javascripts/templates/kotodama.hbs
@@ -38,6 +38,7 @@
               <tr><td>Active Accounts</td><td>{{activeaccs}}</td></tr>
               <tr><td>Feed posts</td><td>{{feedposts}}</td></tr>
               <tr><td>Feed updates</td><td>{{feedcomments}}</td></tr>
+              <tr><td>Feed likes</td><td>{{feedlikes}}</td></tr>
           </table>
         </div>
       </div>
